# AI_AGENTS

./: .env  main.py  pyproject.toml  requirements.txt  scientific_paper_agent_langgraph.ipynb
.devcontainer/: devcontainer.json
Data_analysis_agent/: excel_csv_analyzer.py
Data_analysis_agent.py/: excel_csv_analyzer.py
PM_PROGRESS/: app.py  req.txt
PM_PROGRESS/auth/: auth_manager.py  users.json
PM_PROGRESS/data/log/ayush/: ayush_complete_logs.docx  ayush_logs.json  ayush_logs.md
PM_PROGRESS/data/projects/ayush/: project_20250608_173628.json
PM_PROGRESS/lang_agent/: proceed_l.py
PM_PROGRESS/utils/: file_handler.py
Temp/: 1749615795953.jfif  1749813220775.jfif  1750060225565.jfif
Web_search_summerizer/: summerizer_streamlit.py
career_Assitant_agent/: genai_career_assistant.py
career_Assitant_agent/Agent_output/: Resume_20250428142824.md  Tutorial_20250428141640.md
crypto_mcp_agent/: client.py  config.json
crypto_mcp_agent/server/: crypto_currency.py
essay_grading_agent.py/: essay_grader.py
meme_generator/: 3v66pb.jfif  main.py
mental_wellbeing/: main.py
simple_agent_using_agno/: agno_agent_streamli.py
voice_agent/: main.py
web_scraper_agent/: main.py
