[project]
name = "mcp-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastembed>=0.6.1",
    "gradio>=5.27.0",
    "langchain-groq>=0.3.2",
    "mcp-use>=1.2.8",
    "mcp[cli,use]>=1.6.0",
    "streamlit>=1.44.1",
]
