[project]
name = "mcp-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckduckgo-search==6.3.4",
    "fastembed>=0.6.1",
    "gradio>=5.27.0",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.2",
    "langgraph>=0.3.34",
    "mcp-use>=1.2.8",
    "mcp[cli,use]>=1.6.0",
    "streamlit>=1.44.1",
    "tabulate>=0.9.0",
]
