[project]
name = "mcp-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.5.0",
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.4",
    "crewai>=0.130.0",
    "duckduckgo-search==6.3.4",
    "fastembed>=0.6.1",
    "feedparser>=6.0.11",
    "folium>=0.19.7",
    "gradio>=5.27.0",
    "groq>=0.23.1",
    "gtts>=2.5.4",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.2",
    "langgraph>=0.3.34",
    "markdown>=3.8",
    "matplotlib>=3.10.3",
    "mcp-use>=1.2.8",
    "mcp[cli,use]>=1.6.0",
    "networkx>=3.5",
    "opencv-python>=4.11.0.86",
    "pandoc>=2.4",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.6",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pypandoc>=1.15",
    "python-docx>=1.1.2",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "speechrecognition>=3.14.3",
    "streamlit>=1.44.1",
    "streamlit-drawable-canvas>=0.9.3",
    "streamlit-folium>=0.25.0",
    "tabulate>=0.9.0",
]
